--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,25 +1,25 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
-      </div>
-    </form>
-  </ion-content>
-</ion-modal-view>
+<ion-view>
+    <ion-content>
+        <form>
+            <div class="list easeForm">
+                <pre> form = {{loginData | json}}</pre>
+                <div class="loginlogo"><img class="logeaselogo" src="templates/images/loginlogo.png" alt="">
+                </div>
+                <label class="item item-input">
+                    <span class="input-label">Username</span>
+                    <input type="text" ng-model="loginData.username">
+                </label>
+                <label class="item item-input">
+                    <span class="input-label">Password</span>
+                    <input type="password" ng-model="loginData.password">
+                </label>
+                <label class="item">
+                    <button class="button button-block button-positive loginbtn" type="submit" ng-click="loginForm(loginData)">Log in</button>
+                </label>
+        <a class="create-account" href="#/app/signup">Create an Account</a>
+        <br>
+        <a class="forgot-password" href="#/app/forgot">Forgot Password?</a>
+            </div>
+        </form>
+    </ion-content>
+</ion-view>
