--- a/www/css/style.css
+++ b/www/css/style.css
@@ -101,18 +101,24 @@ fieldset {
 
 .profilea {
     width: 100%;
-    height: 239px;    
+    height: 239px;  
+/*    background: #124960;*/
 }
 .profileb {
     width: 100;
     height: 50px;
     border-top: thin double #124960;
     border-bottom: thin double #124960;
+    color: #fff;
+    background: #124960;
+
 }
 
 .profilec {
-    width: 100%;
-    height: 239px;
+    padding-top: 20px;
+    width: 90%;
+    height: 219px;
+    margin: 0 auto;
 }
 
 .profilepicd {
@@ -149,7 +155,7 @@ fieldset {
 .profileslider {
     height: 25px;
     position: relative;
-    top: 9px;
+    top: 5px;
     width: 290px;
     margin: 0 auto;
 }
@@ -159,17 +165,17 @@ fieldset {
     width: 76px;
 }
 .hwbot {
-    top: 10px;
+    top: 15px;
     width: 14px;
     right: 15px;
 
 }
 .ibot {
-    top: 10px;
+    top: 15px;
     right: 35px;
 }
 .datebot {
-    top: 10px;
+    top: 15px;
     right: 44px;
 
 }
@@ -178,7 +184,7 @@ fieldset {
     position: relative;
     float: right;
     right:7px;
-    top: 5px;
+    top: 10px;
         
 }
 .lftarw {
