--- a/www/templates/clients.html
+++ b/www/templates/clients.html
@@ -1,26 +1,27 @@
 <ion-view view-title="signup">
     <ion-content>
-        <ion-slide-box on-slide-changed="slideHasChanged($index)">
-            <ion-slide>
-                <div class="box blue">
-                    <h1>BLUE</h1>
-                </div>
-            </ion-slide>
-            <ion-slide>
-                <div class="box yellow">
-                    <h1>YELLOW</h1>
-                </div>
-            </ion-slide>
-            <ion-slide>
-           <ion-view view-title="Playlist">
-  <ion-content>
-    <h1>Playlist</h1>
-  </ion-content>
-</ion-view>
-     <div class="box pink">
-                    <h1>PINK</h1>
-                </div>
-            </ion-slide>
-        </ion-slide-box>
+        <ion-list can-swipe="listCanSwipe">
+            <ion-item>
+                Hello, {{item}}!
+            </ion-item>
+            <ion-item>
+                Hello, {{item}}!
+            </ion-item>
+            <ion-item>
+                Hello, {{item}}!
+            </ion-item>
+            <ion-item>
+                Hello, {{item}}!
+            </ion-item>
+            <ion-item>
+                Hello, {{item}}!
+            </ion-item>
+            <ion-item>
+                Hello, {{item}}!
+            </ion-item>
+            <ion-item>
+                Hello, {{item}}!
+            </ion-item>
+        </ion-list>
     </ion-content>
 </ion-view>
